Fix scrollbar issue on whole page

--- a/src/components/calendar-components/Calendar.css
+++ b/src/components/calendar-components/Calendar.css
@@ -1,3 +1,3 @@
 .calendar {
-  @apply gap-x-2 p-1;
+  @apply gap-x-2 p-1 max-h-80 overflow-y-scroll;
 }
