--- a/src/components/standing-components/StandingsTable.css
+++ b/src/components/standing-components/StandingsTable.css
@@ -1,5 +1,5 @@
 .standings-table {
-  @apply flex flex-col justify-center font-titillium p-1 w-full;
+  @apply flex flex-col font-titillium p-1 w-full max-h-80 overflow-y-scroll;
 }
 
 .standings-table-item {
